Changed word-break style from word-break to word-wrap for PC view. bugid:107055

--- a/themes/smart_blog/static/style_library/base.css
+++ b/themes/smart_blog/static/style_library/base.css
@@ -307,7 +307,7 @@ header a {
     position: relative;
     padding: 10px 9px;
     text-decoration: none;
-    word-break: break-all;
+    word-wrap: break-word;
 }
 .widget.has-count .nav-item a {
     padding-right: 38px;
